--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -31,9 +31,9 @@ properties(
                     $class: 'hudson.model.ChoiceParameterDefinition',
                     choices: [
                         "markllama",
-                        "none"
+                        "markllama-aos-cd-bot"
                     ].join("\n"),
-                    defaultValue: 'markllama'
+                    defaultValue: 'markllama-aos-cd-bot'
                 ],
             ]
         ],
@@ -112,7 +112,7 @@ def get_remote_branches(repo_url, pattern="") {
         ].join(" | ")
     )
 
-    return branch_text.split("\n")
+    return branch_text.tokenize("\n")
 }
 
 /**
@@ -174,7 +174,7 @@ node(TARGET_NODE) {
             )
         }
 
-        echo branches
+        //echo branches
         echo "END STAGE: survey"
     }
 }
