--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -111,7 +111,7 @@ def get_remote_branches(repo_url, pattern="") {
         ].join(" | ")
     )
 
-    return branch_text.tokenize("\n")
+    return branch_text.tokenize("\n").trim()
 }
 
 /**
@@ -127,7 +127,7 @@ def get_remote_branches(repo_url, pattern="") {
 @NonCPS
 def get_releases(repo_url) {
     // too clever: chain - get branch names, remove prefix, suffix
-    r = get_remote_branches(repo_url, "enterprise-*").collect { it.trim() - "enterprise-" }.findAll { it =~ /^\d+((\.\d+)*)$/ }
+    r = get_remote_branches(repo_url, 'enterprise-*').collect { it - 'enterprise-' }.findAll { it =~ /^\d+((\.\d+)*)$/ }
 
     // and sort
     z = sort_versions(r)
