--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -111,7 +111,7 @@ def get_remote_branches(repo_url, pattern="") {
         ].join(" | ")
     )
 
-    return branch_text.tokenize("\n").trim()
+    return branch_text.tokenize("\n").collect { it.trim() }
 }
 
 /**
