added back print

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -177,7 +177,7 @@ node(TARGET_NODE) {
             releases = get_releases("git@github.com:markllama/ose")
         }
 
-        //echo "releases: ${releases}"
+        echo "releases: ${releases}"
         echo "END STAGE: survey"
     }
 }
