--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -125,7 +125,7 @@ def get_remote_branches(repo_url, pattern="") {
  * Sort in version order (compare fields as integers, not strings)
  * Requires SSH_AGENT to have set a key for access to the remote repository
  */
-@NonCPS
+//@NonCPS
 def get_releases(repo_url) {
     // too clever: chain - get branch names, remove prefix, suffix
     branches = get_remote_branches(repo_url, 'enterprise-*')
