added back print

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -112,7 +112,7 @@ def get_remote_branches(repo_url, pattern="") {
         ].join(" | ")
     )
 
-    return branch_text.tokenize("\n").collect { it.trim() }
+    return branch_text.tokenize("\n")
 }
 
 /**
@@ -130,7 +130,8 @@ def get_releases(repo_url) {
     // too clever: chain - get branch names, remove prefix, suffix
     branches = get_remote_branches(repo_url, 'enterprise-*')
     echo "branches: ${branches}"
-    r = branches.collect { it - 'enterprise-' }.findAll { it =~ /^\d+((\.\d+)*)$/ }
+    r = branches.collect { it - 'enterprise-' }
+    // .findAll { it =~ /^\d+((\.\d+)*)$/ }
 
     echo "unsorted releases: ${r}"
     
