--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -112,7 +112,7 @@ def get_remote_branches(repo_url, pattern="") {
         ].join(" | ")
     )
 
-    return branch_text.tokenize("\n")
+    return branch_text.split("\n")
 }
 
 /**
