added back print

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -112,7 +112,8 @@ def get_remote_branches(repo_url, pattern="") {
         ].join(" | ")
     ).trim()
 
-    return branch_text.tokenize()
+    branch_list = branch_text.split()
+    return branch_list
 }
 
 /**
