added back print

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -100,7 +100,6 @@ def extract_rpm_release(spec_content) {
  *
  * Requires SSH_AGENT to have set a key for access to the remote repository
  */
-//@NonCPS
 def get_remote_branches(repo_url, pattern="") {
 
     branch_text = sh(
@@ -126,13 +125,11 @@ def get_remote_branches(repo_url, pattern="") {
  * Sort in version order (compare fields as integers, not strings)
  * Requires SSH_AGENT to have set a key for access to the remote repository
  */
-//@NonCPS
 def get_releases(repo_url) {
     // too clever: chain - get branch names, remove prefix, suffix
     branches = get_remote_branches(repo_url, 'enterprise-*')
     echo "branches: ${branches}"
-    r = branches.collect { it - 'enterprise-' }
-    // .findAll { it =~ /^\d+((\.\d+)*)$/ }
+    r = branches.collect { it - 'enterprise-' }.findAll { it =~ /^\d+((\.\d+)*)$/ }
 
     echo "unsorted releases: ${r}"
     
