--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -35,6 +35,12 @@ properties(
                     ].join("\n"),
                     defaultValue: 'markllama-aos-cd-bot'
                 ],
+                [
+                    name: 'BUILD_VERSION',
+                    description: 'The version to build',
+                    $class: 'hudson.model.StringParameterDefinition',
+                    defaultValue: '3.10'
+                ]
             ]
         ],
         disableConcurrentBuilds()
@@ -111,8 +117,7 @@ def get_remote_branches(repo_url, pattern="") {
         ].join(" | ")
     ).trim()
 
-    branch_list = branch_text.split()
-    return branch_list
+    return branch_text.split()
 }
 
 /**
@@ -128,15 +133,9 @@ def get_remote_branches(repo_url, pattern="") {
 def get_releases(repo_url) {
     // too clever: chain - get branch names, remove prefix, suffix
     branches = get_remote_branches(repo_url, 'enterprise-*')
-    echo "branches: ${branches}"
     r = branches.collect { it - 'enterprise-' }.findAll { it =~ /^\d+((\.\d+)*)$/ }
-
-    echo "unsorted releases: ${r}"
-    
     // and sort
     z = sort_versions(r)
-
-    echo "sorted releases: ${z}"
     return z
 }
 
@@ -292,6 +291,8 @@ node(TARGET_NODE) {
         }
 
         echo "releases: ${releases}"
+
+        
         echo "END STAGE: survey"
     }
 }
