added back print

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -292,7 +292,10 @@ node(TARGET_NODE) {
 
         echo "releases: ${releases}"
 
-        
+        if (BUILD_VERSION in releases) {
+            echo "build version is a release"
+        }
+
         echo "END STAGE: survey"
     }
 }
