added back print

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -78,7 +78,7 @@ def get_single_file(owner, repo_name, file_name, repo_token) {
  * Take an RPM spec file and return a map with the version and release strings
  **/
 
-//@NonCPS
+@NonCPS
 def extract_rpm_version(spec_content) {
     def ver_matcher = spec_content =~ /Version:\s*([.0-9]+)/
     if ( ! ver_matcher ) { // Groovy treats matcher as boolean in this context
