--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -154,7 +154,7 @@ def sort_versions(v_in) {
  * If two strings have different numbers of fields, the missing fields are padded with 0s
  * Two versions are equal if all fields are equal
  */
-//@NonCPS
+@NonCPS
 def cmp_version(String v0, String v1) {
     // compare two version strings.
     // return:
